--- a/src/style.css
+++ b/src/style.css
@@ -57,12 +57,21 @@ h1 {
 
 .card {
   padding: 2em;
+
 }
 
 .read-the-docs {
   color: #888;
 }
 
+.card-body {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.w-image {
+  width: 100px;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
